@@ -1,3 +1,9 @@
+2013-05-03  Jesse  <>
+
+	* GREATLib.csproj:
+	* StickmanChampion.cs:
+	* StickmanChampion.cs: 
+
 2013-04-30  Jesse  <>
 
 	* GREATLib.csproj:
